@@ -30,6 +30,7 @@ CHANGELOG Roundcube Webmail
 - Update to TinyMCE 4.1.10 (#1490405)
 - Fix draft removal after a message is sent and storing sent message is disabled (#1490467)
 - Fix so imap folder attribute comparisons are case-insensitive (#1490466)
+- Fix bug where new messages weren't added to the list in search mode
 
 RELEASE 1.1.2
 -------------
